2009-04-06  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Bumped version number to 0.93

2009-03-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	reset the status of pending connections if an error occurs during
	a collection operation.

2009-03-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/addressbook/addressbook.groupdav.overlay.js
	(deleteManager): we invoke "deleteDirectory" after
	deletedSelectedCards, to ensure the list is deleted properly.

2009-03-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js: properly
	decode fields with base64 encoding.
	Work-around a bug of qp encoders which fold lines without escaping
	their crlf.

2009-02-23  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Updated German translation. Patch from
	Alexander Greiner-Baer <sogo-algb@freenet.de>
	* Added Italian translation. Patch from
	Marco Lertora <marco.lertora@infoporto.it>

2009-01-13  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * js/CalDAVAclManager.js
	We now correctly handle the deletion of identities
	with the "caldav_*" key from the user's preferences. 
	We also correctly reinitialize our ivars prior
	to perform a refresh of the ACLs.

2008-12-19  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* js/CalDAVAclManager.js
	Reidented the code. Also modified _appendIdentity()
	to NOT set any imip.identity to the corresponding
	calendar. This is not reliable and the code has
	been moved directly to getProperty() in
	calDavCalendar.js from Lightning.
	* chrome/content/sogo-connector/addressbook/autocomplete-common.js
	We now override ComposeLoad() so that we correctly show
	the "comment" field even when we first compose a message
	See https://bugzilla.mozilla.org/show_bug.cgi?id=227903.

2008-12-03  Ludovic Marcotte  <lmarcotte@inverse.ca>	

	* Added the possibility to refresh CalDAV ACLs